fix(JobCard): remove flex wrap to fix ie and edge broken logo

--- a/react/JobCard/JobCard.less
+++ b/react/JobCard/JobCard.less
@@ -4,7 +4,7 @@
 @job-card-list-indent: @grid-gutter-width;
 @job-card-text-space: 0;
 @job-card-bottom-text-space: @grid-base;
-@job-card-logo-indent: @grid-gutter-width;
+@job-card-logo-indent: @grid-base;
 
 .container {
   position: relative;
@@ -141,7 +141,6 @@
   padding-top: @grid-base;
   padding-bottom: @grid-base * 3;
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
   @supports (display: grid) {
